compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__using_private_function.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 67
expression: "import one\n\npub fn main() {\n  one.two\n}"
---
----- SOURCE CODE
-- one.rakun
fn two() { 2 }

-- main.rakun
import one

pub fn main() {
  one.two
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.rakun:4:6
  │
4 │   one.two
  │      ^^^^

The module `one` does not have a `two` value.
